--- a/disaster_relief/template/about.html
+++ b/disaster_relief/template/about.html
@@ -51,17 +51,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link active">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="index" class="nav-item nav-link">Index</a>
+                <a href="about" class="nav-item nav-link active">About</a>
+                <a href="relief_centers" class="nav-item nav-link">Relief Centers</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="notifications.html" class="dropdown-item">Our Barber</a>
-                        <a href="admin_dashboard.html" class="dropdown-item">Working Hours</a>
-                        <a href="logistics.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="notifications" class="dropdown-item">Notifications</a>
+                        <a href="admin_dashboard" class="dropdown-item">Trash page</a>
+                        <a href="logistics" class="dropdown-item">Testimonial</a>
+                        <a href="pagenotfound" class="dropdown-item">Error page</a>
                     </div>
                 </div>
                 <a href= "contact.html"  class="nav-item nav-link">Contact</a>
