--- a/disaster_relief/template/pagenotfound.html
+++ b/disaster_relief/template/pagenotfound.html
@@ -52,20 +52,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Service</a>
+                <a href="index" class="nav-item nav-link">Index</a>
+                <a href="about" class="nav-item nav-link">About</a>
+                <a href="relief_centers" class="nav-item nav-link">Relief centers</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="notifications.html" class="dropdown-item">Our Barber</a>
-                        <a href="admin_dashboard.html" class="dropdown-item">Working Hours</a>
-                        <a href="logistics.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item active">404 Page</a>
+                        <a href="notifications" class="dropdown-item">Notifications</a>
+                        <a href="admin_dashboard" class="dropdown-item">Trash page</a>
+                        <a href="logistics" class="dropdown-item">Testimonial</a>
+                        <a href="pagenotfound" class="dropdown-item active">Error page</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="report" class="nav-item nav-link">Report</a>
             </div>
             <a href="" class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block">Appointment<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
