--- a/disaster_relief/template/relief_centers.html
+++ b/disaster_relief/template/relief_centers.html
@@ -21,14 +21,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href='{% static "lib/animate/animate.min.css"%}' rel="stylesheet">
+    <link href='{% static "lib/owlcarousel/assets/owl.carousel.min.css"%}' rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href='{% static "css/bootstrap.min.css"%}' rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href='{% static "css/style.css"%}' rel="stylesheet">
 
     <!-- Leaflet CSS for Map -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
@@ -225,16 +225,16 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src='{% static "lib/wow/wow.min.js"%}'></script>
+    <script src='{% static "lib/easing/easing.min.js"%}'></script>
+    <script src='{% static "lib/waypoints/waypoints.min.js" %}'></script>
+    <script src='{% static "lib/owlcarousel/owl.carousel.min.js" %}'></script>
 
     <!-- Leaflet JS for Map -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
     <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+    <script src='{% static "js/main.js"%}'></script>
 
     <!-- Custom Script for Map -->
     <script>
